--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="main__header"></div>
+			<header class="header"></header>
+
 			<div class="main__content">
 				<div class="main__content-cards">
+					<div class="main__content-cards-two">
+						<img src="./src/images/bg-card-back.png" alt="" class="main__content-cards-two-img" />
+						<p class="main__content-cards-two-number">000</p>
+					</div>
 					<div class="main__content-cards-one">
 						<img src="./src/images/card-logo.svg" alt="" class="main__content-cards-one-logo" />
 						<div class="main__content-cards-one-texts">
@@ -23,20 +28,34 @@
 							<p class="main__content-cards-one-texts-date">00/00</p>
 						</div>
 					</div>
-					<div class="main__content-cards-two"></div>
 				</div>
 				<form class="main__content-form">
 					<label for="" class="main__content-form-label">cardholder name</label>
 					<input type="text" class="main__content-form-input" placeholder="e.g. Jane Appleseed" />
 					<label for="" class="main__content-form-label">card number</label>
 					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" />
-					<label for="" class="main__content-form-label">exp. date (mm/yy) &nbsp; cvc </label>
-					<input type="text" class="main__content-form-input main__content-form-input-one" placeholder="MM" />
-					<input type="text" class="main__content-form-input main__content-form-input-two" placeholder="YY" />
-					<input type="text" class="main__content-form-input main__content-form-input-three" placeholder="e.g. 123" />
+					<div class="main__content-form-input-inputs">
+						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--one">
+							<label for="" class="main__content-form-label">exp. date </label>
+							<input type="text" class="main__content-form-input main__content-form-input-one" placeholder="MM" />
+							<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
+						</div>
+						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--two">
+							<label for="" class="main__content-form-label">(mm/yy)</label>
+							<input type="text" class="main__content-form-input main__content-form-input-two" placeholder="YY" />
+						</div>
+						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--three">
+							<label for="" class="main__content-form-label">cvc</label>
+							<input
+								type="text"
+								class="main__content-form-input main__content-form-input-three"
+								placeholder="e.g. 123" />
+							<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
+						</div>
+					</div>
 					<button class="main__content-form-btn">Confirm</button>
 				</form>
-				<div class="main__content-complete">
+				<div class="main__content-complete" style="display: none">
 					<img src="./src/images/icon-complete.svg" alt="Complete icon" class="main__content-complete-img" />
 					<h1 class="main__content-complete-thanks">Thank you!</h1>
 					<p class="main__content-complete-info">We've added your card details Continue</p>
