complete mobile design complete

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<label for="" class="main__content-form-label">cardholder name</label>
 					<input type="text" class="main__content-form-input" placeholder="e.g. Jane Appleseed" />
 					<label for="" class="main__content-form-label">card number</label>
-					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" />
+					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" id="number"/>
 					<div class="main__content-form-input-inputs">
 						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--one">
 							<label for="" class="main__content-form-label">exp. date </label>
@@ -55,15 +55,23 @@
 					</div>
 					<button class="main__content-form-btn">Confirm</button>
 				</form>
-				<div class="main__content-complete" style="display: none">
+				<div class="main__content-complete">
 					<img src="./src/images/icon-complete.svg" alt="Complete icon" class="main__content-complete-img" />
 					<h1 class="main__content-complete-thanks">Thank you!</h1>
-					<p class="main__content-complete-info">We've added your card details Continue</p>
-					<button class="main__content-complete-btn">Confirm</button>
+					<p class="main__content-complete-info">We've added your card details</p>
+					<button class="main__content-form-btn main__content-complete-btn">Continue</button>
 				</div>
 			</div>
 		</div>
+		
+		<!-- let value = cardNumberInput.value.replace(/[^0-9]/g, "");
+	if (value.length > 16) value = value.slice(0, 16);
+	cardNumberInput.value = value.replace(/(\d{4})(?=\d)/g, "$1 ");
+	value = value.padEnd(16, '0');
+	cardNumbers.textContent = value.replace(/(\d{4})(?=\d)/g, "$1 "); -->
 
 		<script defer src="./src/main.js"></script>
 	</body>
 </html>
+
+
