--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 				<form class="main__content-form">
 					<label for="" class="main__content-form-label">cardholder name</label>
 					<input type="text" class="main__content-form-input" placeholder="e.g. Jane Appleseed" />
+					<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
 					<label for="" class="main__content-form-label">card number</label>
 					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" id="number"/>
+					<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
 					<div class="main__content-form-input-inputs">
 						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--one">
 							<label for="" class="main__content-form-label">exp. date </label>
