--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 						<p class="main__content-cards-two-number">000</p>
 					</div>
 					<div class="main__content-cards-one">
-						<img src="./src/images/card-logo.svg" alt="" class="main__content-cards-one-logo" />
-						<div class="main__content-cards-one-texts">
-							<p class="main__content-cards-one-texts-numbers">0000 0000 0000 0000</p>
-							<p class="main__content-cards-one-texts-name">Jane Appleseed</p>
-							<p class="main__content-cards-one-texts-date">00/00</p>
+						<div class="main__content-cards-one-parent">
+							<img src="./src/images/bg-card-front.png" alt="" class="main__content-cards-one-parent-img" />
+							<img src="./src/images/card-logo.svg" alt="" class="main__content-cards-one-parent-logo" />
+							<div class="main__content-cards-one-parent-texts">
+								<p class="main__content-cards-one-parent-texts-numbers">0000 0000 0000 0000</p>
+								<p class="main__content-cards-one-parent-texts-name">Jane Appleseed</p>
+								<p class="main__content-cards-one-parent-texts-date">00/00</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -34,7 +37,7 @@
 					<input type="text" class="main__content-form-input" placeholder="e.g. Jane Appleseed" />
 					<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
 					<label for="" class="main__content-form-label">card number</label>
-					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" id="number"/>
+					<input type="text" class="main__content-form-input" placeholder="e.g. 1234 5678 9123 0000" id="number" />
 					<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
 					<div class="main__content-form-input-inputs">
 						<div class="main__content-form-input-inputs-box main__content-form-input-inputs-box--one">
@@ -65,7 +68,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- let value = cardNumberInput.value.replace(/[^0-9]/g, "");
 	if (value.length > 16) value = value.slice(0, 16);
 	cardNumberInput.value = value.replace(/(\d{4})(?=\d)/g, "$1 ");
@@ -75,5 +78,3 @@
 		<script defer src="./src/main.js"></script>
 	</body>
 </html>
-
-
