--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 								type="text"
 								class="main__content-form-input main__content-form-input-three"
 								placeholder="e.g. 123" id="cvc"/>
-							<p class="main__content-form-input-inputs-box-error" id="confirm-btn">Can't be blank</p>
+							<p class="main__content-form-input-inputs-box-error">Can't be blank</p>
 						</div>
 					</div>
-					<button class="main__content-form-btn">Confirm</button>
+					<button class="main__content-form-btn" id="confirm-btn">Confirm</button>
 				</form>
 				<div class="main__content-complete">
 					<img src="./src/images/icon-complete.svg" alt="Complete icon" class="main__content-complete-img" />
 					<h1 class="main__content-complete-thanks">Thank you!</h1>
 					<p class="main__content-complete-info">We've added your card details</p>
-					<button class="main__content-form-btn main__content-complete-btn">Continue</button>
+					<button class="main__content-form-btn main__content-complete-btn" id="continue-btn">Continue</button>
 				</div>
 			</div>
 		</div>
